--- a/JavaSpring/src/main/resources/application.properties
+++ b/JavaSpring/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port = 8090
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://localhost:3306/work
+spring.datasource.url=jdbc:mysql://localhost:3306/ezhal_shops_test
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=root
 
