--- a/JavaSpring/src/main/resources/application.properties
+++ b/JavaSpring/src/main/resources/application.properties
@@ -3,5 +3,5 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://localhost:3306/ezhal_shops_test
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=
 
